@@ -29,9 +29,11 @@ import org.apache.lucene.index.DirectoryReader;
 import org.apache.lucene.index.IndexReader;
 import org.apache.lucene.index.IndexWriter;
 import org.apache.lucene.index.IndexWriterConfig;
+import org.apache.lucene.index.Term;
 import org.apache.lucene.index.VectorSimilarityFunction;
 import org.apache.lucene.search.IndexSearcher;
 import org.apache.lucene.search.Query;
+import org.apache.lucene.search.TermQuery;
 import org.apache.lucene.store.Directory;
 
 public class TestParentBlockJoinByteKnnVectorQuery extends ParentBlockJoinKnnVectorQueryTestCase {
@@ -79,6 +81,20 @@ public class TestParentBlockJoinByteKnnVectorQuery extends ParentBlockJoinKnnVec
         assertThrows(IllegalStateException.class, () -> searcher.search(kvq, 3));
       }
     }
+  }
+
+  public void testToString() {
+    // test without filter
+    Query query = getParentJoinKnnQuery("field", new float[] {0, 1}, null, 10, null);
+    assertEquals(
+        "DiversifyingChildrenByteKnnVectorQuery:field[0,...][10]", query.toString("ignored"));
+
+    // test with filter
+    Query filter = new TermQuery(new Term("id", "text"));
+    query = getParentJoinKnnQuery("field", new float[] {0, 1}, filter, 10, null);
+    assertEquals(
+        "DiversifyingChildrenByteKnnVectorQuery:field[0,...][10][id:text]",
+        query.toString("ignored"));
   }
 
   private static byte[] fromFloat(float[] queryVector) {
