@@ -106,6 +106,8 @@ Bug Fixes
 * GITHUB#13944: Ensure deterministic order of clauses for `DisjunctionMaxQuery#toString`. (Laurent Jakubina)
 * GITHUB#13841: Improve Tessellatorlogic when two holes share the same vertex with the polygon which was failing
   in valid polygons. (Ignacio Vera)
+* GITHUB#13990: Added filter to the toString() method of Knn[Float|Byte]VectorQuery
+  and DiversifyingChildren[Float|Byte]KnnVectorQuery. (Viswanath Kuchibhotla)
 
 Build
 ---------------------
